owlcarousel fix bug

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
     </div>
     <script src="libs/jquery-3.2.1.js"></script>
-    <script src="libs/docs/assets/owlcarousel/owl.carousel.min.js"></script>
+    <script src="libs/dist/owl.carousel.js"></script>
     <script src="script.js"></script>
     <script src="validation.js"></script>
     <script src="ajaxForm.js"></script>
