New file system

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>WUPRC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="libs/docs/assets/owlcarousel/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="libs/docs/assets/owlcarousel/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="libs/owlCarousel/docs/assets/owlcarousel/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="libs/owlCarousel/docs/assets/owlcarousel/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
@@ -279,8 +279,8 @@
                 <p>Developed by <span>M.U.L PRO</span></p>
             </div>
     </div>
-    <script src="libs/jquery-3.2.1.js"></script>
-    <script src="libs/dist/owl.carousel.js"></script>
+    <script src="libs/jQuery/jquery-3.2.1.js"></script>
+    <script src="libs/owlCarousel/dist/owl.carousel.js"></script>
     <script src="scripts/script.js"></script>
     <script src="scripts/ajaxForm.js"></script>
     <script src="scripts/validation.js"></script>
